<resources>
    <string name="app_name">lemur</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_logo">App logo</string>
    <string name="email">E-posta</string>
    <string name="password">Şifre</string>
    <string name="login">Giriş Yap</string>
    <string name="forgot_password">Şifremi Unuttum</string>
    <string name="do_not_have_account">Hesabın yok mu? Kaydol</string>
    <string name="is_required">Bu alan boş bırakılamaz.</string>
    <string name="invalid_email">Geçersiz e-posta adresi.</string>"
    <string name="invalid_password">Şifre en az bir büyük harf, bir küçük harf ve bir rakam içermelidir.</string>
    <string name="invalid_confirm_password">Şifreler eşleşmiyor.</string>
    <string name="invalid_username">Kullanıcıadı en az 4 karakter en fazla 16 karakter olmalıdır.</string>
    <string name="invalid_max_length">{0} en fazla {1} karakter olabilir.</string>
    <string name="invalid_require_length">{0} {1} karakter olmalıdır.</string>
    <string name="is_same_password">Yeni şifreniz, mevcut şifreniz ile aynı olmamalı.</string>
    <string name="is_same_email">Yeni e-posta adresiniz, mevcut e-posta adresiniz ile aynı olmamalı.</string>
    <string name="username">Kullanıcı adı</string>
    <string name="confirm_password">Şifre tekrarı</string>
    <string name="signup">Kaydol</string>
    <string name="reset_password">Şifre Sıfırla</string>
    <string name="close">Kapat</string>
    <string name="select_one_image">Bir adet resim seçiniz.</string>
    <string name="crop_image">Resim Kırpma</string>
    <string name="crop">KIRP</string>
    <string name="email_sent">E-posta gönderildi.</string>
    <string name="update_profile">Profil Güncelle</string>
    <string name="change_password">Şifre Güncelle</string>
    <string name="notifications">Bildirimler</string>
    <string name="theme">Tema</string>
    <string name="github">GitHub</string>
    <string name="email_verify">E-posta Doğrula</string>
    <string name="email_verified">E-posta Doğrulandı</string>
    <string name="logout">Çıkış Yap</string>
    <string name="yes">EVET</string>
    <string name="no">HAYIR</string>
    <string name="logout_message">Çıkış yapmak istediğinize emin misiniz?</string>
    <string name="email_verification_sent">Doğrulama maili gönderildi.</string>
    <string name="error_unknown">Bilinmeyen bir hata oluştu.</string>
    <string name="error_email_already_exists">E-posta zaten kayıtlı.</string>
    <string name="error_to_many_request">Çok fazla istek gönderildi. Lütfen biraz bekleyin.</string>
    <string name="error_invalid_credential">E-posta veya şifre hatalı.</string>
    <string name="error_wrong_password">Şifre hatalı.</string>
    <string name="error_user_not_found">Kullanıcı bulunamadı veya şifre hatalı.</string>
    <string name="error_login_user_disabled">Kullanıcı hesabı askıya alınmış.</string>
    <string name="error_login_password_is_weak">Geçersiz şifre.</string>
    <string name="user_profile_picture">Kullanıcı fotoğrafı.</string>
    <string name="icon_of_icon_label">Buton resmi.</string>
    <string name="light">Açık</string>
    <string name="dark">Koyu</string>
    <string name="system_default">Sistem varsayılanı</string>
    <string name="home">Anasayfa</string>
    <string name="teams">Takımlar</string>
    <string name="profile">Profil</string>
    <string name="button_icon">Buton resmi.</string>
    <string name="icon">İkon</string>
    <string name="button_go_icon">Buton ilerle resmi.</string>
    <string name="device_notification_permission_denied">Bildirim izineleri reddedildi Özellikleri açmak ister misniz?</string>
    <string name="gallery_permission_denied">Fotoğraflara erişim için gereken özelliklere izin vermediniz. Özelikleri açmak ister misiniz?</string>
    <string name="current_password">Mevcut şifre</string>
    <string name="new_password">Yeni şifre</string>
    <string name="new_password_confirm">Yeni şifre tekrar</string>
    <string name="update">Güncelle</string>
    <string name="delete">Sil</string>
    <string name="update_email">E-posta Güncelle</string>
    <string name="about">Hakkında</string>
    <string name="check_email">Lütfen e-postanızı kontrol edin.</string>
    <string name="no_internet_connection">İnternet bağlantısı yok!</string>
    <string name="see_all">Tümünü Gör</string>
    <string name="confirm">Onayla</string>
    <string name="today">Bugün</string>
    <string name="all">Tümü</string>
    <string name="personal">Kişisel</string>
    <string name="team">Takım</string>
    <string name="meet">Toplantı</string>
    <string name="team_task">Takım Görevi</string>
    <string name="continues">Devam Edenler</string>
    <string name="completed">Tamamlananlar</string>
    <string name="canceled">İptal Edilenler</string>
    <string name="def_empty_task">Görev bulunmuyor.</string>
    <string name="empty_task_today">Bugün için herhangi bir görev bulunmuyor.</string>
    <string name="empty_task_continues">Şu an devam eden bir görev bulunmuyor.</string>
    <string name="empty_task_competed">Henüz tamamlanan bir görev bulunmuyor.</string>
    <string name="empty_task_canceled">İptal edilen bir görev bulunmuyor.</string>
    <string name="empty_task_selected_date">Bu tarihte herhangi bir görev bulunmuyor.</string>
    <string name="search_task">Görev ara</string>
    <string name="date">Tarih</string>
    <string name="create_task_button">Görev oluşturma butonu.</string>
    <string name="select_time">Lütfen bir zaman aralığı seçiniz</string>
    <string name="select_start_time">Başlangıç saati</string>
    <string name="select_end_time">Bitiş saati</string>
    <string name="create">Oluştur</string>
    <string name="add_image">Resim ekle</string>
    <string name="subject">Konu</string>
    <string name="description">Açıklama</string>
    <string name="invalid_length_error">{0} en az {1} karakter en fazla {2} karakter olmalıdır.</string>
    <string name="select_task_type">Lütfen bir görev tipi seçiniz</string>
    <string name="task">Kişisel Görev</string>
    <string name="fixed_hour">sa.</string>
    <string name="fixed_minute">dk.</string>
    <string name="update_task_button">Görev güncelleme butonu.</string>
    <string name="add_note">Not Ekle</string>
    <string name="notes">Notlar</string>
    <string name="delete_task_message">Bu görevi silmek istediğine emin misin?</string>
    <string name="cancel">İptal Et</string>
    <string name="complete">Tamamla</string>
    <string name="cancel_task_message">Bu görevi iptal etmek istediğine emin misin?</string>
    <string name="complete_task_message">Bu görevi tammalamak istediğine emin misin?</string>
    <string name="create_team">Takım Oluştur</string>
    <string name="join_team">Takıma Katıl</string>
    <string name="team_name">Takım Adı</string>
    <string name="invite_code">Davet kodu</string>
    <string name="role">Rol</string>
    <string name="join">Katıl</string>
    <string name="join_error">Hata oluştu.</string>
    <string name="create_task">Görev Oluştur</string>
    <string name="create_room">Oda Oluştur</string>
    <string name="members">Üyeler</string>
    <string name="leave_team">Takımdan Ayrıl</string>
    <string name="role_management">Roller</string>
    <string name="invite_code_big">Davet Kodu</string>
    <string name="room_name">Oda adı</string>
    <string name="accessible_roles">Rol yetkilendirmek için tıklayınız.</string>
    <string name="select_one_role">En az bir role yetki verilmelidir.</string>
    <string name="invite_code_copied">Davet kodu kopyalandı.</string>
    <string name="leave_team_question">Takımdan ayrılmak istediğinize emin misiniz?</string>
    <string name="change_team_owner_and_leave_team_question">{0} adlı kullanıcıyı takım lideri yapmak üzeresiniz. Bu işlem sonrası takımdan ayrılacaksınız. Devam etmek istediğinize emin misiniz?</string>
    <string name="leave_team_and_delete_question">Takımdan ayrılmak üzeresiniz. Bu işlem sonrası takım silinecektir. Devam etmek istediğinize emin misiniz?</string>
    <string name="empty_task_content">Görev listeniz boş. Hemen bir görev ekleyin!</string>
    <string name="join_or_create_team">Takım Oluştur / Takıma Katıl</string>
    <string name="empty_team_content">Henüz bir takıma katılmadınız veya takım oluşturmadınız.</string>
    <string name="empty_room_content">Henüz bir oda oluşturulmadı veya bir odaya eklenmediniz.</string>
    <string name="member_image">Üye fotoğrafı</string>
    <string name="remove_member_button">Kullanıcı kaldırma butonu.</string>
    <string name="remove_member_message">{0} adlı kullanıcıyı takımdan çıkarmak istediğinize emin misiniz?</string>
    <string name="remove_role_from_member_message">{0} adlı kullanıcıdan {1} rolünü kaldırmak istediğinize emin misiniz?</string>
    <string name="delete_team">Takımı Sil</string>
    <string name="delete_team_question">Takımı silmek istediğinize emin misiniz?</string>
    <string name="task_management_permission">Görev Yönetimi</string>
    <string name="room_management_permission">Oda Yönetimi</string>
    <string name="update_team_permission">Takım Güncelleme</string>
    <string name="member_management_permission">Üye Yönetimi</string>
    <string name="role_management_permission">Rol Yönetimi</string>
    <string name="change_team_owner">Liderliği Devret</string>
    <string name="team_lead_label">Takım Lideri</string>
    <string name="team_admin_label">Yönetici</string>
    <string name="team_member_label">Üye</string>
    <string name="search_member">Üye ara</string>
    <string name="cannot_find_member">Üye bulunmuyor.</string>
    <string name="component_search_bar_hint">Ara</string>
    <string name="search_role">Rol ara</string>
    <string name="cannot_find_role">Rol bulunmuyor.</string>
    <string name="create_role_fab">Rol oluştur.</string>
    <string name="remove_role_button">Rol kaldırma butonu.</string>
    <string name="add_new_member">Yeni Üye Ekle</string>
    <string name="edit_role">Düzenle</string>
    <string name="delete_role">Rolü Sil</string>
    <string name="role_name">Rol Adı</string>
    <string name="change_permissions">İzinleri güncellemek için tıklayınız.</string>
    <string name="remove_selection_icon">Seçim kaldırma ikonu.</string>
    <string name="assign_role_question">Seçili kişiye/kişilere {0} rolünü atamak istediğinize emin misiniz?</string>
    <string name="delete_role_question">{0} rolünü kaldırmak istediğinize emin misiniz?</string>
    <string name="select_permission">İzin seçmek için tıklayınız.</string>
    <string name="create_role">Rol Oluştur</string>
</resources>
