<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/BottomSheetWrapper"
    tools:context=".ui.team.component.actionsheet.ActionSheet">

    <include layout="@layout/drag_handle" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/team_image"
        style="@style/Sheet.TeamImage" />

    <TextView
        android:id="@+id/tv_team_name"
        style="@style/Sheet.TeamName"
        android:text="@string/app_name" />

    <TextView
        android:id="@+id/tv_team_description"
        style="@style/Sheet.TeamDescription"
        android:text="@string/app_name" />

    <com.avcialper.lemur.ui.component.IconLabel
        android:id="@+id/action_update"
        style="@style/FillHorizontal"
        android:label="@string/update"
        app:left_icon="@drawable/ic_edit" />

    <com.avcialper.lemur.ui.component.IconLabel
        android:id="@+id/action_members"
        style="@style/FillHorizontal"
        android:label="@string/members"
        app:left_icon="@drawable/ic_team" />

    <com.avcialper.lemur.ui.component.IconLabel
        android:id="@+id/action_invite_code"
        style="@style/FillHorizontal"
        android:label="@string/invite_code_big"
        app:left_icon="@drawable/ic_link" />

    <com.avcialper.lemur.ui.component.IconLabel
        android:id="@+id/action_role_management"
        style="@style/FillHorizontal"
        android:label="@string/role_management"
        app:left_icon="@drawable/ic_badge" />

    <com.avcialper.lemur.ui.component.IconLabel
        android:id="@+id/action_leave_team"
        style="@style/FillHorizontal"
        android:label="@string/leave_team"
        app:left_icon="@drawable/ic_logout" />

</LinearLayout>