<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/ScrollView">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        style="@style/LinearPage"
        android:gravity="top"
        tools:context=".ui.home.HomeFragment">

        <com.avcialper.owlcalendar.OwlCalendar
            android:id="@+id/owl_calendar"
            style="@style/FillHorizontal"
            app:date_text_color="?attr/primaryColor"
            app:day_name_text_color="?attr/primaryColor"
            app:day_text_color="?attr/primaryColor"
            app:picker_background_color="?attr/backgroundColor"
            app:picker_button_text="@string/confirm" />

        <com.avcialper.lemur.ui.component.TasksArea
            android:id="@+id/component_selected_date"
            style="@style/FillHorizontal"
            app:empty_text="@string/empty_task_selected_date" />

        <com.avcialper.lemur.ui.component.TasksArea
            android:id="@+id/component_today"
            style="@style/FillHorizontal"
            app:empty_text="@string/empty_task_today" />

        <com.avcialper.lemur.ui.component.TasksArea
            android:id="@+id/component_continues"
            style="@style/FillHorizontal"
            app:empty_text="@string/empty_task_continues" />

        <com.avcialper.lemur.ui.component.TasksArea
            android:id="@+id/component_completed"
            style="@style/FillHorizontal"
            app:empty_text="@string/empty_task_competed" />

        <com.avcialper.lemur.ui.component.TasksArea
            android:id="@+id/component_canceled"
            style="@style/FillHorizontal"
            app:empty_text="@string/empty_task_canceled" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>