<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/ScrollView"
    tools:context=".ui.auth.signup.SignupFragment">

    <LinearLayout style="@style/LinearPage">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/image_user"
            style="@style/AppLogo"
            android:contentDescription="@string/app_logo"
            android:scaleType="centerCrop"
            android:src="@drawable/select_image"
            app:shapeAppearanceOverlay="@style/RoundedImage" />

        <com.avcialper.lemur.ui.component.TextInput
            android:id="@+id/input_username"
            style="@style/FillHorizontal"
            android:hint="@string/username"
            android:inputType="text"
            app:counter_max_length="@integer/max_username_length"
            app:have_counter="true" />

        <com.avcialper.lemur.ui.component.TextInput
            android:id="@+id/input_email"
            style="@style/FillHorizontal"
            android:autofillHints="emailAddress"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <com.avcialper.lemur.ui.component.TextInput
            android:id="@+id/input_password"
            style="@style/Password"
            android:autofillHints="password"
            android:hint="@string/password" />

        <com.avcialper.lemur.ui.component.TextInput
            android:id="@+id/input_confirm_password"
            style="@style/Password"
            android:hint="@string/confirm_password"
            android:imeOptions="actionDone" />

        <Button
            android:id="@+id/button_signup"
            style="@style/AuthButton"
            android:text="@string/signup" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>