<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/ScrollView"
    tools:context=".ui.profile.updatepassword.UpdatePasswordFragment">

    <LinearLayout style="@style/LinearPage">

        <com.avcialper.lemur.ui.component.TextInput
            android:id="@+id/input_current_password"
            style="@style/Password"
            android:hint="@string/current_password" />

        <com.avcialper.lemur.ui.component.TextInput
            android:id="@+id/input_new_password"
            style="@style/Password"
            android:autofillHints="password"
            android:hint="@string/new_password" />

        <com.avcialper.lemur.ui.component.TextInput
            android:id="@+id/input_new_password_confirm"
            style="@style/Password"
            android:hint="@string/new_password_confirm"
            android:imeOptions="actionDone" />

        <Button
            android:id="@+id/button_update"
            style="@style/Button"
            android:text="@string/update" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>