<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/ScrollView">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        style="@style/LinearPage"
        tools:context=".ui.profile.updateprofile.UpdateProfileFragment">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/image_profile_picture"
            style="@style/ProfileUpdateImage"
            android:contentDescription="@string/user_profile_picture" />

        <com.avcialper.lemur.ui.component.TextInput
            android:id="@+id/input_username"
            style="@style/FillHorizontal"
            android:hint="@string/username"
            android:inputType="text" />

        <com.avcialper.lemur.ui.component.TextInput
            android:id="@+id/input_about"
            style="@style/FillHorizontal"
            android:hint="@string/about"
            android:inputType="textMultiLine"
            app:counter_max_length="50"
            app:have_counter="true" />

        <Button
            android:id="@+id/button_update"
            style="@style/Button"
            android:text="@string/update" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>