<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/LinearPage"
    tools:context=".ui.auth.forgot.ForgotPasswordFragment">

    <ImageView
        style="@style/Image"
        android:contentDescription="@string/app_name" />

    <com.avcialper.lemur.ui.component.TextInput
        android:id="@+id/input_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="emailAddress"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/button_send"
        style="@style/AuthButton"
        android:text="@string/reset_password" />

</LinearLayout>