<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/LinearPage"
    tools:context=".ui.team.create.CreateTeamFragment">

    <com.avcialper.lemur.ui.component.TextInput
        android:id="@+id/input_team_name"
        style="@style/FillHorizontal"
        android:hint="@string/team_name"
        android:inputType="textMultiLine"
        app:counter_max_length="@integer/max_team_name_length"
        app:have_counter="true" />

    <com.avcialper.lemur.ui.component.TextInput
        android:id="@+id/input_team_description"
        style="@style/FillHorizontal"
        android:hint="@string/description"
        android:inputType="textMultiLine"
        app:counter_max_length="@integer/max_about_length"
        app:have_counter="true" />

    <TextView
        android:id="@+id/tv_add_image"
        style="@style/CreateTeamSelectImage"
        android:layout_marginBottom="@dimen/margin_small"
        android:text="@string/add_image"
        app:drawableStartCompat="@drawable/ic_add_image" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/team_image"
        style="@style/CreateTeamImage" />

    <Button
        android:id="@+id/button_create_team"
        style="@style/Button"
        android:text="@string/create_team" />

</LinearLayout>