<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView style="@style/ScrollView">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        style="@style/LinearPage"
        tools:context=".ui.profile.updateemail.UpdateEmailFragment">

        <com.avcialper.lemur.ui.component.TextInput
            android:id="@+id/component_email"
            style="@style/FillHorizontal"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <com.avcialper.lemur.ui.component.TextInput
            android:id="@+id/component_password"
            style="@style/Password"
            android:hint="@string/password" />

        <Button
            android:id="@+id/button_update"
            style="@style/Button"
            android:text="@string/update" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>
