<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.team.TeamFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_teams"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/padding_medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.avcialper.lemur.ui.component.CustomFAB
        android:id="@+id/fab"
        style="@style/Theme.Lemur"
        app:fab_count="two"
        app:fab_icon="@drawable/ic_add"
        app:first_fab_text="@string/create_team"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:second_fab_text="@string/join_team" />

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.avcialper.lemur.ui.component.EmptyArea
        android:id="@+id/empty_area"
        style="@style/FillHorizontal"
        android:padding="@dimen/padding_medium"
        android:visibility="gone"
        app:buttonText="@string/join_or_create_team"
        app:contentText="@string/empty_team_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>