<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/LinearPage"
    tools:context=".ui.team.update.UpdateTeamFragment">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/team_image"
        style="@style/UpdateTeamImage"
        android:visibility="visible" />

    <com.avcialper.lemur.ui.component.TextInput
        android:id="@+id/input_team_name"
        style="@style/FillHorizontal"
        android:hint="@string/team_name"
        android:inputType="textMultiLine"
        app:counter_max_length="@integer/max_team_name_length"
        app:have_counter="true" />

    <com.avcialper.lemur.ui.component.TextInput
        android:id="@+id/input_team_description"
        style="@style/FillHorizontal"
        android:hint="@string/description"
        android:inputType="textMultiLine"
        app:counter_max_length="@integer/max_about_length"
        app:have_counter="true" />

    <Button
        android:id="@+id/button_update_team"
        style="@style/Button"
        android:text="@string/update" />

    <ProgressBar
        android:id="@+id/progress"
        style="@style/FillHorizontal"
        android:visibility="gone" />

</LinearLayout>