<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/LinearPage"
    tools:context=".ui.team.roles.update.UpdateRoleFragment">

    <com.avcialper.lemur.ui.component.TextInput
        android:id="@+id/component_role_name"
        style="@style/FillHorizontal"
        android:hint="@string/role_name"
        android:inputType="text" />

    <TextView
        android:id="@+id/text_change_permissions"
        style="@style/FillHorizontal"
        android:text="@string/change_permissions"
        android:textSize="@dimen/text_size_medium" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/cg_permissions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:clipToPadding="false"
        android:foregroundGravity="left"
        app:chipSpacingVertical="-4dp"
        app:singleLine="false"
        app:singleSelection="false" />

    <Button
        android:id="@+id/button_update"
        style="@style/Button"
        android:text="@string/update" />

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" />

</LinearLayout>